ui. Delete and search icon in menu

--- a/Diagnosis.Client.App/Controls/Search/Autocomplete.xaml
+++ b/Diagnosis.Client.App/Controls/Search/Autocomplete.xaml
@@ -129,10 +129,10 @@
                                           InputGestureText="F2"
                                           Command="{Binding PlacementTarget.Tag.EditCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
                                 <MenuItem Header="Удалить"
-                                          InputGestureText="Delete"
+                                          Style="{StaticResource deleteMenuItem}"
                                           Command="{Binding PlacementTarget.Tag.DeleteCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
                                 <MenuItem Header="Искать"
-                                          InputGestureText="Ctrl+F"
+                                          Style="{StaticResource searchMenuItem}"
                                           Command="{Binding PlacementTarget.Tag.SendToSearchCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
                                 <!--<MenuItem Command="{Binding ConvertCommand}">
                                     <MenuItem.Header>
