--- a/Diagnosis.Client.App/App.xaml
+++ b/Diagnosis.Client.App/App.xaml
@@ -46,6 +46,84 @@
             <properties:Settings x:Key="Settings" />
             <properties:Resources x:Key="Resources" />
 
+            <Style x:Key="EnableDisableImageStyle"
+                   TargetType="{x:Type Image}">
+                <Style.Triggers>
+                    <Trigger Property="IsEnabled"
+                             Value="False">
+                        <Setter Property="Opacity"
+                                Value="0.75" />
+                        <Setter Property="BitmapEffect">
+                            <Setter.Value>
+                                <BlurBitmapEffect Radius="2.0"
+                                                  KernelType="Gaussian" />
+                            </Setter.Value>
+                        </Setter>
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            
+            <Style x:Key="cutMenuItem"
+                   x:Shared="False"
+                   TargetType="MenuItem"
+                   BasedOn="{StaticResource {x:Type MenuItem}}">
+                <Setter Property="Command"
+                        Value="{x:Static ApplicationCommands.Cut}" />
+                <Setter Property="Icon">
+                    <Setter.Value>
+                        <Image Source="{StaticResource cutImage}"/>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="copyMenuItem"
+                   x:Shared="False"
+                   TargetType="MenuItem"
+                   BasedOn="{StaticResource {x:Type MenuItem}}">
+                <Setter Property="Command"
+                        Value="{x:Static ApplicationCommands.Copy}" />
+                <Setter Property="Icon">
+                    <Setter.Value>
+                        <Image Source="{StaticResource copyImage}" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="pasteMenuItem"
+                   x:Shared="False"
+                   TargetType="MenuItem"
+                   BasedOn="{StaticResource {x:Type MenuItem}}">
+                <Setter Property="Command"
+                        Value="{x:Static ApplicationCommands.Paste}" />
+                <Setter Property="Icon">
+                    <Setter.Value>
+                        <Image Source="{StaticResource pasteImage}" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="deleteMenuItem"
+                   x:Shared="False"
+                   TargetType="MenuItem"
+                   BasedOn="{StaticResource {x:Type MenuItem}}">
+                <Setter Property="InputGestureText"
+                        Value="Delete" />
+                <Setter Property="Icon">
+                    <Setter.Value>
+                        <Image Source="{StaticResource deleteImage}" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <Style x:Key="searchMenuItem"
+                   x:Shared="False"
+                   TargetType="MenuItem"
+                   BasedOn="{StaticResource {x:Type MenuItem}}">
+                <Setter Property="InputGestureText"
+                        Value="Ctrl+F" />
+                <Setter Property="Icon">
+                    <Setter.Value>
+                        <Image Source="{StaticResource findImage}" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
             <!-- Tag is HolderVm -->
             <ContextMenu x:Key="HolderContextMenu" 
                          DataContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
@@ -69,43 +147,11 @@
                           Visibility="{Binding OpenCommand.IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
                           Command="{Binding OpenCommand}" />
                 <MenuItem Header="Удалить"
-                          InputGestureText="Delete"
+                          Style="{StaticResource deleteMenuItem}"
                           Command="{Binding DeleteCommand}" />
             </ContextMenu>
 
-            <Style x:Key="cutMenuItem"
-                   TargetType="MenuItem"
-                   BasedOn="{StaticResource {x:Type MenuItem}}"                   >
-                <Setter Property="Command"
-                        Value="{x:Static ApplicationCommands.Cut}" />
-                <Setter Property="Icon">
-                    <Setter.Value>
-                        <Image Source="{StaticResource cutImage}" />                        
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <Style x:Key="copyMenuItem"
-                   TargetType="MenuItem"                   
-                   BasedOn="{StaticResource {x:Type MenuItem}}">
-                <Setter Property="Command"
-                        Value="{x:Static ApplicationCommands.Copy}" />
-                <Setter Property="Icon">
-                    <Setter.Value>
-                        <Image Source="{StaticResource copyImage}" />
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <Style x:Key="pasteMenuItem"
-                   TargetType="MenuItem"
-                   BasedOn="{StaticResource {x:Type MenuItem}}">
-                <Setter Property="Command"
-                        Value="{x:Static ApplicationCommands.Paste}" />
-                <Setter Property="Icon">
-                    <Setter.Value>
-                        <Image Source="{StaticResource pasteImage}" />
-                    </Setter.Value>
-                </Setter>
-            </Style>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
