--- a/Diagnosis.Client.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/HealthRecordsList.xaml
@@ -377,10 +377,10 @@
 
                                     <!-- HrList -->
                                     <MenuItem Header="Искать"
-                                              InputGestureText="Ctrl+F"
+                                              Style="{StaticResource searchMenuItem}"
                                               Command="{Binding PlacementTarget.Tag.SendToSearchCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
                                     <MenuItem Header="Удалить"
-                                              InputGestureText="Delete"
+                                              Style="{StaticResource deleteMenuItem}"
                                               Command="{Binding PlacementTarget.Tag.DeleteCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
                                     <Separator Visibility="{Binding PlacementTarget.Tag.MoveHrCommand.IsVisible, 
                                                Converter={StaticResource BooleanToVisibilityConverter}, 
