--- a/Diagnosis.Client.App/Screens/Patients.xaml
+++ b/Diagnosis.Client.App/Screens/Patients.xaml
@@ -178,7 +178,7 @@
                                               InputGestureText="F2"
                                               Command="{Binding PlacementTarget.Tag.EditCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
                                     <MenuItem Header="Удалить"
-                                              InputGestureText="Delete"
+                                              Style="{StaticResource deleteMenuItem}"
                                               Command="{Binding PlacementTarget.Tag.DeleteCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
                                     <Separator />
                                     <MenuItem Header="Новый..."
