ui. Order uoms by type than factor

--- a/Diagnosis.Client.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.Client.App/Controls/Search/Tag.xaml
@@ -112,8 +112,8 @@
 
                         <DataTrigger Binding="{Binding BlankType}"
                                      Value="{x:Static diag:BlankType.Query}">
-                            <Setter Property="Foreground"
-                                    Value="Red" />
+                            <!--<Setter Property="Foreground"
+                                    Value="Red" />-->
                         </DataTrigger>
                         <DataTrigger Binding="{Binding BlankType}"
                                      Value="{x:Static diag:BlankType.Comment}">
