--- a/Diagnosis.Client.App/Controls/CardParts/Header.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/Header.xaml
@@ -80,13 +80,13 @@
                                     <Setter Property="Visibility"
                                             Value="Collapsed" />
 
-                                    <Style.Triggers>
+                                    <!--<Style.Triggers>
                                         <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=Grid}, Path=IsMouseOver}"
                                                      Value="true">
                                             <Setter Property="Visibility"
                                                     Value="Visible" />
                                         </DataTrigger>
-                                    </Style.Triggers>
+                                    </Style.Triggers>-->
                                 </Style>
                             </Button.Style>
                             <DockPanel>
