model. Add HrItem Confidence
--HG--
branch : f/Confidence

--- a/Diagnosis.Client.App/Controls/Search/Autocomplete.xaml
+++ b/Diagnosis.Client.App/Controls/Search/Autocomplete.xaml
@@ -21,6 +21,8 @@
     <UserControl.InputBindings>
         <KeyBinding Key="F2"
                     Command="{Binding EditCommand}" />
+        <KeyBinding Key="F8"
+                    Command="{Binding ToggleConfidenceCommand}" />
         <KeyBinding Key="Space"
                     Modifiers="Control"
                     Command="{Binding ShowSuggestionsCommand}" />
