ui. AccentColor for IsHighlighted CardItem and Hyperlinks

--- a/Diagnosis.Client.App/Screens/Card.xaml
+++ b/Diagnosis.Client.App/Screens/Card.xaml
@@ -84,7 +84,7 @@
                         <DataTrigger Binding="{Binding IsHighlighted}"
                                      Value="True">
                             <Setter Property="Background"
-                                    Value="LightCyan" />
+                                    Value="{StaticResource AccentColorBrush4}" />
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
