--- a/Diagnosis.Client.App/App.xaml
+++ b/Diagnosis.Client.App/App.xaml
@@ -48,6 +48,32 @@
             <properties:Settings x:Key="Settings" />
             <properties:Resources x:Key="Resources" />
 
+            <!--Hyperlink-->
+            <Style TargetType="{x:Type Hyperlink}"
+                   BasedOn="{StaticResource {x:Type Hyperlink}}">
+                <Setter Property="Foreground"
+                        Value="{DynamicResource HighlightBrush}" />
+                <Setter Property="TextDecorations"
+                        Value="Underline" />
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver"
+                             Value="True">
+                        <Setter Property="Foreground"
+                                Value="{DynamicResource AccentColorBrush}" />
+                    </Trigger>
+                    <Trigger Property="IsEnabled"
+                             Value="False">
+                        <Setter Property="Foreground"
+                                Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+                    </Trigger>
+                    <Trigger Property="IsEnabled"
+                             Value="True">
+                        <Setter Property="Cursor"
+                                Value="Hand" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+
             <!-- Tag is HolderVm -->
             <ContextMenu x:Key="HolderContextMenu"
                          DataContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
