--- a/Diagnosis.Client.App/Windows/AdminSettingsWindow.xaml
+++ b/Diagnosis.Client.App/Windows/AdminSettingsWindow.xaml
@@ -12,59 +12,14 @@
         WindowStartupLocation="CenterOwner"
         UseLayoutRounding="True">
     <Window.Resources>
-        <Style TargetType="DockPanel"
-               BasedOn="{StaticResource formLine}">
-        </Style>
     </Window.Resources>
-    <Grid Margin="0,0,10,10">
+    <Grid Margin="{StaticResource SreenPadding}" >
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <Grid Margin="10,10,0,0"
-              Grid.IsSharedSizeScope="True">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-
-            <DockPanel>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition SharedSizeGroup="label"
-                                          Width="auto" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-
-                    <Label Content="Новый пароль" />
-                    <Border DataContext="{Binding IsWrongPassword}"
-                            Grid.Column="1">
-                        <PasswordBox x:Name="password"
-                                     VerticalContentAlignment="Center"
-                                     PasswordChanged="password_PasswordChanged" />
-                    </Border>
-                </Grid>
-            </DockPanel>
-            <DockPanel Visibility="{Binding IsRepeatVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
-                       Grid.Row="1">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition SharedSizeGroup="label"
-                                          Width="auto" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-
-                    <Label Content="Повторите пароль" />
-                    <Border DataContext="{Binding IsWrongPassword}"
-                            Grid.Column="1">
-                        <PasswordBox x:Name="passwordRepeat"
-                                     VerticalContentAlignment="Center"
-                                     PasswordChanged="password_PasswordChanged" />
-                    </Border>
-                </Grid>
-            </DockPanel>
-        </Grid>
+        <controls:NewPasswordControl Grid.IsSharedSizeScope="True"/>
 
         <StackPanel Grid.Row="1"
                     Style="{StaticResource DialogButtonsPanel}">
