--- a/Diagnosis.Common.Presentation/Resources/MarginResources.xaml
+++ b/Diagnosis.Common.Presentation/Resources/MarginResources.xaml
@@ -5,5 +5,6 @@
 
     <s:Double x:Key="DataGridSreenMaxWidth">500</s:Double>
     <w:Thickness x:Key="SreenPadding">10</w:Thickness>
+    <w:Thickness x:Key="FormLineMargin">0 0 0 10</w:Thickness>
 
 </ResourceDictionary>
