--- a/Diagnosis.Client.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/HealthRecordsList.xaml
@@ -7,7 +7,7 @@
              xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
              xmlns:card="clr-namespace:Diagnosis.Client.App.Controls.CardParts"
              xmlns:controls="clr-namespace:Diagnosis.Client.App.Controls"
-             xmlns:editors="clr-namespace:Diagnosis.Client.App.Controls.Editors"
+             xmlns:forms="clr-namespace:Diagnosis.Client.App.Controls.FormParts"
              xmlns:beh="clr-namespace:Diagnosis.Client.App.Behaviors"
              xmlns:design="clr-namespace:Diagnosis.Client.App.DesignData"
              xmlns:diag="http://schemas.smg.com/diagnosis"
