--- a/Diagnosis.Client.App/Controls/FormParts/CategoryChooser.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/CategoryChooser.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:Diagnosis.Client.App.Controls.Editors"
+             xmlns:local="clr-namespace:Diagnosis.Client.App.Controls.FormParts"
              xmlns:diag="http://schemas.smg.com/diagnosis"
-             x:Class="Diagnosis.Client.App.Controls.Editors.CategoryChooser"
+             x:Class="Diagnosis.Client.App.Controls.FormParts.CategoryChooser"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300">
