--- a/Diagnosis.Client.App/Controls/FormParts/ComboBoxDatePicker.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/ComboBoxDatePicker.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.Client.App.Controls"
              xmlns:diag="http://schemas.smg.com/diagnosis"
-             x:Class="Diagnosis.Client.App.Controls.Editors.ComboBoxDatePicker"
+             x:Class="Diagnosis.Client.App.Controls.FormParts.ComboBoxDatePicker"
              mc:Ignorable="d"
              d:DesignWidth="300"
              x:Name="root">
