--- a/Diagnosis.Client.App/Controls/FormParts/ConfirmPasswordControl.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/ConfirmPasswordControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.Client.App.Controls.Editors.ConfirmPasswordControl"
+﻿<UserControl x:Class="Diagnosis.Client.App.Controls.FormParts.ConfirmPasswordControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
