--- a/Diagnosis.Client.App/Controls/FormParts/SexChooser.xaml
+++ b/Diagnosis.Client.App/Controls/FormParts/SexChooser.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.Client.App.Controls.Editors.SexChooser"
+﻿<UserControl x:Class="Diagnosis.Client.App.Controls.FormParts.SexChooser"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
