--- a/Diagnosis.Client.App/Screens/Search.xaml
+++ b/Diagnosis.Client.App/Screens/Search.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:controls="clr-namespace:Diagnosis.Client.App.Controls"
              xmlns:search="clr-namespace:Diagnosis.Client.App.Controls.Search"
-             xmlns:editors="clr-namespace:Diagnosis.Client.App.Controls.Editors"
+             xmlns:forms="clr-namespace:Diagnosis.Client.App.Controls.FormParts"
              xmlns:card="clr-namespace:Diagnosis.Client.App.Controls.CardParts"
              xmlns:s="clr-namespace:System;assembly=mscorlib"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -144,7 +144,7 @@
                 <Label Content="{Binding HrCategories, Source={StaticResource Resources}}" />
                 <DockPanel Style="{StaticResource formLine}"
                            HorizontalAlignment="Left">
-                    <editors:CategoryChooser CategoryMultiSelection="{StaticResource True}" />
+                    <forms:CategoryChooser CategoryMultiSelection="{StaticResource True}" />
                 </DockPanel>
                 <!--<DockPanel>
                     <TextBlock Style="{StaticResource lineHeader}">Дата осмотра</TextBlock>
@@ -161,14 +161,14 @@
                                 </Style>
                             </DockPanel.Style>
                             <TextBlock Width="18">от</TextBlock>
-                            <editors:ComboBoxDatePicker
+                            <forms:ComboBoxDatePicker
                                           Year="{Binding AppYearLower, Mode=TwoWay}"
                                           Month="{Binding AppMonthLower, Mode=TwoWay}"
                                           Day="{Binding AppDayLower, Mode=TwoWay}" />
                         </DockPanel>
                         <DockPanel Style="{StaticResource line}">
                             <TextBlock Margin="-5,0,5,0" Padding="5,0,0,0" Width="18">до</TextBlock>
-                            <editors:ComboBoxDatePicker
+                            <forms:ComboBoxDatePicker
                                           Year="{Binding AppYearUpper, Mode=TwoWay}"
                                           Month="{Binding AppMonthUpper, Mode=TwoWay}"
                                           Day="{Binding AppDayUpper, Mode=TwoWay}" />
@@ -178,9 +178,9 @@
                 <DockPanel Style="{StaticResource line}">
                     <TextBlock Style="{StaticResource lineHeader}">Давность между</TextBlock>
                     <DockPanel>
-                        <editors:DateOffsetPicker DateOffset="{Binding HrDateOffsetLower}" />
+                        <forms:DateOffsetPicker DateOffset="{Binding HrDateOffsetLower}" />
                         <TextBlock Margin="5,0,5,0">и</TextBlock>
-                        <editors:DateOffsetPicker DateOffset="{Binding HrDateOffsetUpper}" />
+                        <forms:DateOffsetPicker DateOffset="{Binding HrDateOffsetUpper}" />
                     </DockPanel>
                 </DockPanel>-->
 
