--- a/Diagnosis.Client.App/Windows/AdminSettingsWindow.xaml
+++ b/Diagnosis.Client.App/Windows/AdminSettingsWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:diag="http://schemas.smg.com/diagnosis"
-        xmlns:editors="clr-namespace:Diagnosis.Client.App.Controls.Editors"
+        xmlns:forms="clr-namespace:Diagnosis.Client.App.Controls.FormParts"
         diag:DialogCloser.DialogResult="{Binding DialogResult}"
         Title="Настройки"
         SizeToContent="Height"
@@ -19,7 +19,7 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <editors:ConfirmPasswordControl Grid.IsSharedSizeScope="True"/>
+        <forms:ConfirmPasswordControl Grid.IsSharedSizeScope="True"/>
 
         <StackPanel Grid.Row="1"
                     Style="{StaticResource DialogButtonsPanel}">
