--- a/Diagnosis.Client.App/Windows/Editors/DoctorEditorWindow.xaml
+++ b/Diagnosis.Client.App/Windows/Editors/DoctorEditorWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:editors="clr-namespace:Diagnosis.Client.App.Controls.Editors"
+        xmlns:forms="clr-namespace:Diagnosis.Client.App.Controls.FormParts"
         xmlns:controls="clr-namespace:Diagnosis.Client.App.Controls"
         xmlns:card="clr-namespace:Diagnosis.Client.App.Controls.CardParts"
         xmlns:diag="http://schemas.smg.com/diagnosis"
@@ -48,7 +48,7 @@
                 </DockPanel>
                 <DockPanel>
                     <Label Content="Пол" VerticalAlignment="Top" />
-                    <editors:SexChooser Width="100"
+                    <forms:SexChooser Width="100"
                                         HorizontalAlignment="Left"
                                         VerticalAlignment="Center" />
                 </DockPanel>
